[gd_scene load_steps=10 format=2]

[ext_resource path="res://Shaders/WhiteOutlineShader.tres" type="Material" id=1]
[ext_resource path="res://Sprites/Interactables/MiningRig/MiningRig TopDown Coins1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Craftables/MiningRig.tres" type="Resource" id=3]
[ext_resource path="res://Sprites/Interactables/MiningRig/MiningRig TopDown.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Interactables/MiningRig.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Interactables/MiningRig/MiningRig TopDownShadow.png" type="Texture" id=6]


[sub_resource type="CapsuleShape2D" id=1]
radius = 3.99997
height = 24.0001

[sub_resource type="Animation" id=2]
resource_name = "Mining"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningrigSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 0, 1, 2 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.0
height = 14.0

[node name="MiningRig" type="StaticBody2D"]
collision_layer = 8
script = ExtResource( 5 )
item_def = ExtResource( 3 )

[node name="MiningrigShadow" type="Sprite" parent="."]
position = Vector2( -1, -4.5 )
texture = ExtResource( 6 )

[node name="MiningrigSprite" type="Sprite" parent="."]
material = ExtResource( 1 )
position = Vector2( -1, -4.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Mining = SubResource( 2 )

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 0, -5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="GoldCoins" type="Sprite" parent="."]
position = Vector2( -1, -5 )
texture = ExtResource( 2 )

[node name="MiningTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
